Fix share menu not entirely visible on short articles

--- a/static/css/mstyles.css
+++ b/static/css/mstyles.css
@@ -814,3 +814,8 @@ aside {
     margin-right: 40px;
     text-align: right;
 }
+
+/* Make sure share menu is visible, even on short articles */
+.mdl-card {
+    overflow: visible;
+}
